* fix Overflow.

--- a/css/common.css
+++ b/css/common.css
@@ -546,6 +546,10 @@ nav .menu li.active:hover a {
   color: var(--color-font);
 }
 
+main {
+  overflow-x: hidden;
+}
+
 /* Hero */
 .hero {
   background-color: var(--color-section);
@@ -1341,7 +1345,6 @@ footer .navigations .map {
 
 footer .navigations .map:nth-child(6) {
   padding-bottom: 100px;
-
 }
 
 footer .navigations .map h3 {
@@ -1359,6 +1362,66 @@ footer .navigations .map li a {
 }
 
 footer .navigations .map li a:hover {
+  text-decoration: underline;
+}
+
+/* FOOTER / HOW TO SHOP */
+footer .how-to-shop {
+  font-size: 12px;
+  line-height: 1.4;
+  color: var(--color-font-darkgray);
+}
+
+footer .how-to-shop a {
+  color: var(--color-link);
+}
+
+footer .how-to-shop a:hover {
+  text-decoration: underline;
+}
+
+/* FOOTER / LEGAL */
+footer .legal {
+  margin-top: 10px;
+  padding: 10px 0 40px;
+  border-top: 1px solid var(--color-border);
+  display: flex;
+  gap: 50px;
+  font-size: 12px;
+  color: var(--color-font-darkgray);
+}
+
+footer .legal .copyright {
+  font-size: 12px;
+  color: var(--color-font-darkgray);
+}
+
+footer .legal ul {
+  flex-grow: 1;
+  display: flex;
+  gap: 21px;
+}
+
+footer .legal ul li {
+  position: relative;
+}
+
+footer .legal ul li::after {
+  content: "|";
+  position: absolute;
+  right: -11px;
+  color: var(--color-border);
+}
+
+footer .legal ul li:last-child::after {
+  display: none;
+}
+
+footer .legal ul li {
+
+}
+
+footer .legal ul li:hover a {
   text-decoration: underline;
 }
 
